[package]
name = "dob-decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
ckb-cinnabar-verifier = { workspace = true }

common = { path = "../../core/common", features = ["card"] }
database = { path = "../../core/database" }
